--- a/template9/index.html
+++ b/template9/index.html
@@ -66,12 +66,12 @@
   </div>
 
   <aside>
-    <h3>Enlaces útiles</h3>
-    <a href="../index.html">Desarrollador</a><br>
-    <a href="../portafolio.html">Portafolio</a><br>
-    <h3>Información extra</h3>
-    <p>Horarios de atención: 9:00 AM - 6:00 PM</p>
-    <p>Teléfono: +1 555 123 4567</p>
+    <h3 data-texto="enlacesUtiles"></h3>
+    <a href="../index.html" data-texto="desarrollador"></a><br>
+    <a href="../portafolio.html" data-texto="portafolio"></a><br>
+    <h3 data-texto="informacionExtra"></h3>
+    <p data-texto="horariosDeAtencion"></p>
+    <p data-texto="telefono"></p>
   </aside>
 
 </div>
