--- a/template9/index.html
+++ b/template9/index.html
@@ -28,7 +28,7 @@
 
 <header>
   <h1 data-texto="titulo"></h1>
-  <button id="switchLang">Cambiar a Inglés</button>
+  <button id="switchLang">Switch to English</button>
   <button id="modoOscuro" data-texto="modoOscuro">🌙 Modo Oscuro</button>
 </header>
 
