--- a/portafolio.html
+++ b/portafolio.html
@@ -52,6 +52,7 @@
 					<li><a href="https://app.iconicastill.com/mensajes/" target="_blank">Acceder a App (DJANGO) - Recepción de mensajes</a></li>
 					<li><a href="https://app.iconicastill.com/panel/mensajes/" target="_blank">Acceder a App (DJANGO) - Administracion de mensajes</a></li>
 					<li><a href="template11">Acceder a App (DJANGO) - CRM - En construccion...</a></li>
+					<li><a href="template11">Dashboard - Simulacion...</a></li>
 				</ul>
 						</div>
 				</div>
