--- a/template13/index.html
+++ b/template13/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>My Page</title>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+
 </head>
 <body>
 
