--- a/template13/index.html
+++ b/template13/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 
 </head>
-<body>
+<body class="bg-light">
 
-  <header>
+  <header class="text-center py-4"></header>
     <h1>My Website</h1>
     <p>Welcome to my simple website</p>
   </header>
