--- a/template13/index.html
+++ b/template13/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="bg-light">
 
-  <header class="text-center py-4"></header>
+  <header class="text-center py-4">
     <h1>My Website</h1>
     <p>Welcome to my simple website</p>
   </header>
