--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           </div>
 
           <div class="inputcaja">
-            <input type="email" name="email" id="email" required>
+            <input type="email" name="email" id="email" autocomplete="email" required>
             <label for="email">Email</label>
           </div>
 
